# lk_math

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aabb.rs  arraynd.rs  bijection.rs  cli.rs  explore.rs  expr.rs  geometric_algebra.rs  geometric_traits.rs  interval.rs  interval_set.rs  lib.rs  line.rs  line_iterator.rs  linear_index.rs  math.rs  modular.rs  ord_float.rs  permutations.rs  prelude.rs  sketch.rs  transformations.rs  vector.rs  voting.rs
src/group/: group.rs  group_presentation.rs  map.rs  mod.rs
