[package]
name = "lk_math"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Collection of reusable mathematical tools."
repository = "https://github.com/lubomirkurcak/lk_math/"
keywords = ["math", "algebra", "geometry", "gamedev", "algorithm"]
categories = ["algorithms", "data-structures", "game-development", "mathematics", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_arrays"]

